<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/custom_margin"
    tools:context=".QuestionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_margin"
            android:text="@string/q1"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_margin"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/q1a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/custom_margin"
                android:layout_marginStart="@dimen/custom_margin"
                android:text="@string/ans1a" />

            <CheckBox
                android:id="@+id/q1a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/custom_margin"
                android:layout_marginStart="@dimen/custom_margin"
                android:text="@string/ans1b" />

            <CheckBox
                android:id="@+id/q1a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/custom_margin"
                android:layout_marginStart="@dimen/custom_margin"
                android:text="@string/ans1c" />

            <CheckBox
                android:id="@+id/q1a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/custom_margin"
                android:layout_marginStart="@dimen/custom_margin"
                android:text="@string/ans1d" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_margin"
            android:text="@string/q2"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_margin"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/q2a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/custom_margin"
                android:layout_marginStart="@dimen/custom_margin"
                android:text="@string/ans2a" />

            <CheckBox
                android:id="@+id/q2a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/custom_margin"
                android:layout_marginStart="@dimen/custom_margin"
                android:text="@string/ans2b" />

            <CheckBox
                android:id="@+id/q2a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/custom_margin"
                android:layout_marginStart="@dimen/custom_margin"
                android:text="@string/ans2c" />

            <CheckBox
                android:id="@+id/q2a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/custom_margin"
                android:layout_marginStart="@dimen/custom_margin"
                android:text="@string/ans2d" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_margin"
            android:text="@string/q3"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <RadioGroup
            android:id="@+id/q4myRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/checked">

            <RadioButton
                android:id="@+id/q4a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:text="@string/ans3a" />

            <RadioButton
                android:id="@+id/q4a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:text="@string/ans3b" />

        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_margin"
            android:text="@string/q4"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/q3myRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/checked">

            <RadioButton
                android:id="@+id/q3a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:text="@string/ans4a" />

            <RadioButton
                android:id="@+id/q3a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:text="@string/ans4b" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_margin"
            android:text="@string/q5"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/q5a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:hint="@string/ans"
            android:inputType="textCapCharacters"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_margin"
            android:text="@string/q6"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/q6a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:hint="@string/ans"
            android:inputType="textCapCharacters"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_margin"
            android:text="@string/q7"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/q7myRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/checked">

            <RadioButton
                android:id="@+id/q7a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:text="@string/ans7a" />

            <RadioButton
                android:id="@+id/q7a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:text="@string/ans7b" />

            <RadioButton
                android:id="@+id/q7a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:text="@string/ans7c" />

            <RadioButton
                android:id="@+id/q7a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:text="@string/ans7d" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_margin"
            android:text="@string/q8"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/q8myRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/checked">

            <RadioButton
                android:id="@+id/q8a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:text="@string/ans8a" />

            <RadioButton
                android:id="@+id/q8a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:text="@string/ans8b" />

            <RadioButton
                android:id="@+id/q8a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:text="@string/ans8c" />

            <RadioButton
                android:id="@+id/q8a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginStart="@dimen/fab_margin"
                android:text="@string/ans8d" />

        </RadioGroup>

        <Button
            android:id="@+id/submit_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="9dp"
            android:background="#0288D1"
            android:padding="7dp"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>


    </LinearLayout>

</ScrollView>